Index, Modal Crear & LandingPage -- Etiquetado & Estilo Completo 'Fase Alfa'

--- a/font/icons-reference.html
+++ b/font/icons-reference.html
@@ -135,6 +135,10 @@
           <div class="icon icon-twitter"></div>
           <input type="text" readonly="readonly" value="twitter">
         </li>
+        <li>
+          <div class="icon icon-sedes"></div>
+          <input type="text" readonly="readonly" value="sedes">
+        </li>
       </ul>
       <h2>Character mapping</h2>
       <ul class="glyphs character-mapping">
@@ -257,6 +261,10 @@
         <li>
           <div data-icon="b" class="icon"></div>
           <input type="text" readonly="readonly" value="b">
+        </li>
+        <li>
+          <div data-icon="i" class="icon"></div>
+          <input type="text" readonly="readonly" value="i">
         </li>
       </ul>
     </div>
