--- a/landingPage.html
+++ b/landingPage.html
@@ -269,7 +269,7 @@
   <section class="pie">
     <p class="pie__derechosReservados">DR | 2017<i class="icon-registrado"></i></p>
     <div class="pie__logo"><img class="imagen-fluida" src="images/agora_logo_blanco.svg"/></div>
-    <div class="pie__redesSociales"><i class="pie__redesSociales--icono icon-a-logo"></i><i class="pie__redesSociales--icono icon-facebook"></i><i class="pie__redesSociales--icono icon-correo"></i></div>
+    <div class="pie__redesSociales"><a href="index.html"><i class="pie__redesSociales--icono icon-a-logo"></i></a><a href="https://www.facebook.com/agoraink/" target="_blank"><i class="pie__redesSociales--icono icon-facebook"></i></a><a href="mailto:agoraeventos@outlook.com"><i class="pie__redesSociales--icono icon-correo"></i></a></div>
   </section>
   <script src="js/jquery-3.2.1.min.js"></script>
   <script type="text/javascript">
